--- a/css/styles.css
+++ b/css/styles.css
@@ -3,24 +3,13 @@ body {
     color: white!important;
     display: block!important;
     padding-top: 0%!important;
+    margin-left: 20%;
 }
-
-.row-style {
-    background-color: #9D1EE8!important;
-    color: white!important;
-}
-
-.filecontent {
-    white-space: pre-wrap!important;
-    margin-left: 10%!important;
-    margin-right: 10%!important;
-} 
 
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
     height: 0;
-    margin: 2%;
 }
 
 .videoWrapper iframe {
@@ -43,4 +32,31 @@ body {
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
+}
+
+.vertical-center {
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translate(0,-50%);
+    transform: translate(0,-50%);
+}
+
+.table {
+    border-bottom: 1px solid #454d55;
+}
+
+.table thead th{
+    border-top: 0px solid;
+}
+
+.custom-wrapper {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.custom-container {
+    margin-left: 20%!important;
 }
