--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ body {
     margin-bottom: 2%;
 }
 
-.btn-img {
+.mediacontrol {
     display: block!important;
     width: 5vw;
     height: 5vw;
@@ -98,7 +98,7 @@ body {
 
 .btn-img img{
     float: left;
-    opacity: 0.7;
+    opacity: 0.5;
 }
 
 .btn-img img:hover {
